<resources>
    <string name="app_name">Robot</string>

    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="action_stop">Stop</string>
    <string name="action_sel_charts">Select charts</string>
    <string name="action_select_all">Select All</string>
    <string name="action_unselect_all">Unselect All</string>

    <string name="action_motor_graph">Motors Charts</string>
    <string name="action_select_all_motor_graph">Select All</string>
    <string name="action_unselect_all_motor_graph">Unselect All</string>
    <string name="sel_chart_motor_front_left">Front  Left  Motor</string>
    <string name="sel_chart_motor_front_right">Front Right Motor</string>
    <string name="sel_chart_motor_back_left">Back  Left  Motor</string>
    <string name="sel_chart_motor_back_right">Back Right Motor</string>

    <string name="action_accelerometer_graph">Accelerometer Charts</string>
    <string name="action_select_all_accelerometer_graph">Select All</string>
    <string name="action_unselect_all_accelerometer_graph">Unselect All</string>
    <string name="sel_chart_accelerometer_x">Acc X</string>
    <string name="sel_chart_accelerometer_y">Acc Y</string>
    <string name="sel_chart_accelerometer_z">Acc Z</string>

    <string name="action_gyroscope_graph">Giroscope Charts</string>
    <string name="action_select_all_gyroscope_graph">Select All</string>
    <string name="action_unselect_all_gyroscope_graph">Unselect All</string>
    <string name="sel_chart_gyroscope_x">Giro X</string>
    <string name="sel_chart_gyroscope_y">Giro Y</string>
    <string name="sel_chart_gyroscope_z">Giro Z</string>

    <string name="action_compass_graph">Compass Charts</string>
    <string name="action_select_all_compass_graph">Select All</string>
    <string name="action_unselect_all_compass_graph">Unselect All</string>
    <string name="sel_chart_compass_x">Compass X</string>
    <string name="sel_chart_compass_y">Compass Y</string>
    <string name="sel_chart_compass_z">Compass Z</string>

    <string name="action_us_graph">Ultrasound Charts</string>

    <string name="section_chart">Charts</string>
    <string name="section_logs">Logs</string>
    <string name="section_map">Map</string>
    <string name="section_control">Drive</string>
    <string name="section_robot">Robot</string>
    <string name="section_configure">Config</string>

    <string name="section_format">Hello World from section: %s</string>

    <string name="hello">Hello World, TextFieldTest!</string>
    <string name="namespace">http://schemas.android.com/apk/res/android</string>

    <string name="angle_value">Angle: %1$+07.2f  leftVelocity: %2$4d</string>
    <string name="offset_value">%2$4d: rightVelocity  %1$3.2f :Offset</string>
    <string name="angle_value_none">Angle: none</string>
    <string name="offset_value_none">none :Offset</string>

</resources>
